# url-shortener

./: Cargo.toml  Dockerfile
src/: main.rs
src/applications/: api.rs
src/applications/api/: mod.rs  shorten.rs
src/services/: mod.rs  shorten_storage.rs
www/: index.html
www/static/: .rustc_info.json
