[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
handlebars = "4.3.5"
rand = "0.8.5"
redis = { version = "0.22.1", default-features = false, features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0.147", features = ["derive"] }
uuid = { version = "1.2.1", features = ["v4", "fast-rng"] }
